# convergence-analysis

./: .env  .gitignore  BACKLOG.md  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
data/: ai_labor_displacement.json  counter_elite.json  elite_overproduction.json  fiscal_decline.json  institutional_legitimacy.json  mental_health.json  platform_concentration.json  popular_immiseration.json  trust_network.json
fetchers/: ai_labor_displacement.py  base_fetcher.py  counter_elite.py  elite_overproduction.py  fiscal_decline.py  institutional_legitimacy.py  mental_health.py  platform_concentration.py  popular_immiseration.py  trust_network.py
scripts/: validate_schema.py
src/: App.jsx  index.css
src/components/threads/: EliteOverproduction.jsx  PopularImmiseration.jsx  ThreadStubs.jsx
src/components/ui/: ThreadCard.jsx
src/data/: reader.js
src/hooks/: useThreadData.js
